# my-finance-bot

./: .dockerignore  .env.example  .rsync-exclude  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: delpoy.yml
metabase/: queries.sql
nginx/: nginx.conf  start-nginx.sh
nginx/conf.d/: metabase.conf
nginx/templates/: metabase-http.template  metabase-https.template
postgres_config/: pg_hba.conf
scripts/: clean_db.sql  generate_test_data.py  nginx_reload.sh  seed.py
src/bot/: __main__.py  states.py
src/bot/handlers/: categories.py  common.py  envelopes.py  goals.py  manage.py  phases.py  quest.py  scheduler.py  stats.py  transactions.py
src/bot/keyboards/: __init__.py  inline.py  reply.py
src/bot/middlewares/: __init__.py  auth.py  repo.py
src/core/: settings.py
src/db/: repo_holder.py  utils.py
src/db/models/: __init__.py  category.py  envelope.py  goal.py  phase.py  scheduled_task.py  system_state.py  transaction.py  transfer.py  user.py
src/db/repositories/: __init__.py  base.py  category.py  envelope.py  goal.py  phase.py  scheduled_task.py  system_state.py  transaction.py  transfer.py  user.py
src/services/: quest.py  scheduler.py  stats.py
